syntax = "proto3";

package protolith.services.v1;

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string session = 1;
}